SM 20230811 Added Routing and AuthGuard

--- a/SMBlog-UI/src/app/app.component.html
+++ b/SMBlog-UI/src/app/app.component.html
@@ -1,1 +1,9 @@
-<h1>Application</h1>
+<app-navbar></app-navbar>
+<div class="content">
+    <router-outlet></router-outlet>
+</div>
+<footer class="footer">
+    <div class="container">
+        <span class="text-muted"> © <span id="year">2023</span> SM Blogs - All right reserved.</span>
+    </div>
+</footer>
