--- a/SMBlog-UI/src/app/components/register/register.component.html
+++ b/SMBlog-UI/src/app/components/register/register.component.html
@@ -60,6 +60,7 @@
     <div class="mb-3">
         <input
             type="password"
+            autocomplete="on"
             [ngClass]="{'is-invalid' : hasErrors('password') && isTouched('password'),
                         'is-valid' : !hasErrors('password') && isTouched('password')}"
             class="form-control form-control-lg"
@@ -78,6 +79,7 @@
     <div class="mb-3">
         <input
             type="password"
+            autocomplete="on"
             [ngClass]="{'is-invalid' : 
                         (formHasError('isMatching') || hasErrors('confirmPassword')) 
                         && isTouched('confirmPassword'),
