--- a/SMBlog-UI/src/app/components/navbar/navbar.component.html
+++ b/SMBlog-UI/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container">
 
-        <a class="navbar-brand" routerLink='/' routerLinkActive='active'>SMLab</a>
+        <a class="navbar-brand" routerLink='/' routerLinkActive='active'>sameermitra.com</a>
 
         <button class="navbar-toggler"
             data-toggle="collapse"
